--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "youtube clone project",
   "scripts": {
-    "win": "node index.js"
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,14 @@
   "bugs": {
     "url": "https://github.com/racheal1227/wetube/issues"
   },
-  "homepage": "https://github.com/racheal1227/wetube#readme"
+  "homepage": "https://github.com/racheal1227/wetube#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/node": "^7.20.0",
+    "@babel/preset-env": "^7.19.4",
+    "nodemon": "^2.0.20"
+  }
 }
