--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "homepage": "https://github.com/racheal1227/wetube#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
